[package]
name = "lexicon-reaper"
version = "0.1.0"
edition = "2024"
description = "A terminal word-spelling RPG inspired by Letter Quest"

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
tui-big-text = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
rand_chacha = "0.3"
dirs = "6"
color-eyre = "0.6"
ureq = "2"
